First Connection/src/objects/Shop__c.object
<CustomObject>
    <description>Shop custom object</description>
    <fields>
        <fullName>Corporation__c</fullName>
        <label>Corporation</label>
        <referenceTo>Corporation__c</referenceTo>
        <relationshipLabel>Shops</relationshipLabel>
        <relationshipName>Shops</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Director__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <description>Shop Director Contact</description>
        <label>Director</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Shops</relationshipLabel>
        <relationshipName>Shops</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Monthly_Revenue__c</fullName>
        <description>Shop Monthly Revenue</description>
        <inlineHelpText>Show Revenue For Month</inlineHelpText>
        <label>Monthly Revenue</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Shop_Annual_Revenue__c</fullName>
        <formula>Monthly_Revenue__c  * 12</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Shop Annual Revenue</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Shop_Poster__c</fullName>
        <label>Shop Poster</label>
        <length>131072</length>
        <type>Html</type>
    </fields>
    <label>Shop</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>Rich_Web_Shop</fullName>
        <columns>NAME</columns>
        <filterScope>Mine</filterScope>
        <label>Rich Web Shop</label>
    </listViews>
    <nameField>
        <label>Shop Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Shops</pluralLabel>
    <recordTypes>
        <fullName>Delete_Users</fullName>
        <active>true</active>
        <description>Delete Users Record Type</description>
        <label>Delete Users</label>
    </recordTypes>
    <recordTypes>
        <fullName>Supermarket</fullName>
        <active>true</active>
        <description>Supermarket Record Type</description>
        <label>Supermarket</label>
    </recordTypes>
    <recordTypes>
        <fullName>Web_shop</fullName>
        <active>true</active>
        <description>Web Shop Record Type</description>
        <label>Web shop</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>Director_Rule</fullName>
        <active>true</active>
        <description>Check if director field is empty</description>
        <errorConditionFormula>ISBLANK(Director__c)</errorConditionFormula>
        <errorDisplayField>Director__c</errorDisplayField>
        <errorMessage>Director cannot be empty</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Monthly_Revenue_Rule</fullName>
        <active>true</active>
        <description>Check If Monthly Revenue Rule Greater Than 0</description>
        <errorConditionFormula>Monthly_Revenue__c   &lt;=  0</errorConditionFormula>
        <errorDisplayField>Monthly_Revenue__c</errorDisplayField>
        <errorMessage>Monthly Revenue Should Be Greater Than 0</errorMessage>
    </validationRules>
</CustomObject>